[package]
name = "ring-python-impl"
version = "1.0.0"
edition = "2024"
build = "build.rs"

[lib]
crate-type = ["cdylib"]

[build-dependencies]
cc = "1"

[dependencies]
libc = "0.2"
pyo3 = { version = "0.28", features = ["abi3-py37", "extension-module"] }
ring-lang-rs = "0.1"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
